@@ -1,1 +1,1 @@
-syndie.version=0.917b
+syndie.version=0.918b
